; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_syscall.c_ts_mmap.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_syscall.c_ts_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"mmap\00", align 1
@MAP_FAILED = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i32, i32, i32, i32)* @ts_mmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ts_mmap(i8* %0, i64 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %14 = call i64 @tsIsFailErrno(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %6
  %17 = load i8*, i8** @MAP_FAILED, align 8
  store i8* %17, i8** %7, align 8
  br label %26

18:                                               ; preds = %6
  %19 = load i8*, i8** %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = call i8* @orig_mmap(i8* %19, i64 %20, i32 %21, i32 %22, i32 %23, i32 %24)
  store i8* %25, i8** %7, align 8
  br label %26

26:                                               ; preds = %18, %16
  %27 = load i8*, i8** %7, align 8
  ret i8* %27
}

declare dso_local i64 @tsIsFailErrno(i8*) #1

declare dso_local i8* @orig_mmap(i8*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
